Fix: isAddonsSelected() return string instead of boolean Fix: Personal info input width: 100% causing overflow

--- a/src/content_components/content/personal-info/personalInfo_style.scss
+++ b/src/content_components/content/personal-info/personalInfo_style.scss
@@ -23,6 +23,7 @@
     position: relative;
     font-size: 14px;
     margin-bottom: 30px;
+    width: 100%;
   }
 
   input {
@@ -31,7 +32,7 @@
     display: block;
     height: 2.5rem;
     margin: 0;
-    width: 100%;
+    width: -webkit-fill-available;
     background-color: white;
     border: 1px solid hsl(229, 24%, 87%);
     border-radius: 10px;
@@ -81,7 +82,7 @@
     width: max-content;
     position: absolute;
     top: 0px;
-    right: -15px;
+    right: 0px;
   }
   input:valid + span {
     display: none;
