--- a/src/index.scss
+++ b/src/index.scss
@@ -37,7 +37,7 @@ body {
     grid-row: 1 / 2;
     margin-top: 40px;
     margin-left: 60px;
-    margin-right: 80px;
+    margin-right: 60px;
   }
 
   .navigation-panel {
@@ -45,7 +45,7 @@ body {
     grid-row: 2 / 3;
     margin-bottom: 20px;
     margin-left: 60px;
-    margin-right: 80px;
+    margin-right: 60px;
   }
 }
 
